[package]
name = "rusty-rplace-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
rayon = "1.8.0"
serde = "1.0.193"
serde_derive = "1.0.193"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.0"
